--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -12,6 +12,19 @@
 </head>
 <body>
     <div id="app">
+        <div class="container">
+            <div class="row">
+                <div class="col-1">
+                    <i @click="back" class="far fa-arrow-alt-circle-left"></i>
+                </div>
+                <div class="slider-photo col-10">
+                    <img :src="photos[imgIndex]" alt="">
+                </div>
+                <div class="col-1">
+                    <i @click="next" class="far fa-arrow-alt-circle-right"></i>
+                </div>
+            </div>
+        </div>
         
     </div>
     <script type="text/javascript" src="./js/script.js"></script>
