--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <div class="slider-photo-box row align-items-center">
 
                         <!-- photo -->
-                        <div class="col-12">
+                        <div class="slider-photo-inner col-12">
                             <img @mouseover="mouseOver()" 
                             @mouseleave="mouseLeave()"
                             :src="photos[imgIndex]" alt="">
